<resources>
    <string name="app_name">Project 0</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="make_your_app_material">Make Your App Material</string>
    <string name="capstone_my_own_app">Capstone: My Own App</string>
    <string name="go_ubiquitous">Go Ubiquitous</string>
    <string name="this_button_will_launch">"This button will launch "</string>
</resources>
