<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    tools:context="co.dijam.michael.project0.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/my_nanodegree_apps"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/titleText" />

        <Button
            android:id="@+id/popularMoviesButton"
            style="@style/project_button"
            android:text="@string/popular_movies" />

        <Button
            android:id="@+id/stockHawkButton"
            style="@style/project_button"
            android:text="@string/stock_hawk" />

        <Button
            android:id="@+id/buildItBiggerButton"
            style="@style/project_button"
            android:text="@string/build_it_bigger" />

        <Button
            android:id="@+id/makeYourAppMaterialButton"
            style="@style/project_button"
            android:text="@string/make_your_app_material" />

        <Button
            android:id="@+id/goUbiquitousButton"
            style="@style/project_button"
            android:text="@string/go_ubiquitous" />

        <Button
            android:id="@+id/capstoneButton"
            style="@style/capstone_button"
            android:text="@string/capstone_my_own_app" />

    </LinearLayout>
</ScrollView>